Bugfix - card overflow

--- a/profile/assets/css/materialize.css
+++ b/profile/assets/css/materialize.css
@@ -4434,6 +4434,7 @@ small {
   position: relative;
   display:inline-block;
   margin: 10px;
+  overflow: hidden;
 }
 
 .card.small .card-image, .card.medium .card-image, .card.large .card-image {
